<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.napptilus.oompaloompa.presentation.workersListFragment.viewModel.WorkersListFragmentVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9D00FF"
            android:text="@string/title_Oompa_search"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/worker_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D0D0D0"
            android:textCursorDrawable="@null"
            app:iconifiedByDefault="false"
            app:queryBackground="@null"
            app:queryHint="@string/hint_searcher" />

        <TextView
            android:id="@+id/title_filter_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_search_filter"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rb_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_name" />

            <CheckBox
                android:id="@+id/rb_profession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_profession" />
        </LinearLayout>

        <TextView
            android:id="@+id/title_search_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_change_page"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/id_rest_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_restbutton" />

            <TextView
                android:id="@+id/id_count_page"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/id_plus_buton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_plusbutton" />
        </LinearLayout>

        <Button
            android:id="@+id/id_refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/text_refresh"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
</layout>