<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.napptilus.oompaloompa.database.model.WorkersRoomModel" />

        <variable
            name="clickListener"
            type="com.napptilus.oompaloompa.presentation.workersListFragment.adapter.ClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> clickListener.onClick(data)}"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="8dp"
            app:imageUrl="@{data.image}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_name"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hello" />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:text="@{data.firstName}"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/title_firstName"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hello" />

        <TextView
            android:id="@+id/secondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:text="@{data.last_name}"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/firstName"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hello" />

        <TextView
            android:id="@+id/gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_gender"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/firstName"
            tools:text="Hello" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:text="@{data.gender}"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/gender_title"
            app:layout_constraintTop_toBottomOf="@+id/firstName"
            tools:text="Hello" />

        <TextView
            android:id="@+id/proffesion_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_proffesion"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/gender"
            tools:text="Hello" />

        <TextView
            android:id="@+id/proffesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:text="@{data.profession}"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/proffesion_title"
            app:layout_constraintTop_toBottomOf="@+id/gender"
            tools:text="Hello" />

        <TextView
            android:id="@+id/country_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_country"
            app:layout_constraintStart_toEndOf="@+id/gender"
            app:layout_constraintTop_toBottomOf="@+id/secondName"
            tools:text="Hello" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@{data.profession}"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/country_title"
            app:layout_constraintTop_toBottomOf="@+id/secondName"
            tools:text="Hello" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>